# docs/swagger.json
@@ -20,8 +20,8 @@
                     {
                         "type": "string",
                         "format": "text",
-                        "description": "filter by search text",
-                        "name": "search",
+                        "description": "filter by title",
+                        "name": "title",
                         "in": "query"
                     }
                 ],
@@ -364,7 +364,7 @@
                 "parameters": [
                     {
                         "description": "Order id",
-                        "name": "status",
+                        "name": "id",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -528,6 +528,37 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/httpmodels.TestingRegisterResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/validate": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "validate auth",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "token=xxx",
+                        "description": "token",
+                        "name": "Cookie",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httpmodels.TestingValidateResponse"
                         }
                     }
                 }
@@ -756,6 +787,29 @@
                 },
                 "password": {
                     "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "userName": {
+                    "type": "string"
+                }
+            }
+        },
+        "httpmodels.TestingValidateResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "requestID": {
+                    "type": "integer"
                 },
                 "role": {
                     "type": "string"
